--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Perfug-maroc.github.io by perfug-maroc</title>
+    <title>Performance User Group Maroc by perfug-morocco</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,14 +17,14 @@
   <body>
 
       <header>
-        <h1>Perfug-maroc.github.io</h1>
+        <h1>Performance User Group Maroc</h1>
         <p>performance morocco maroc jug perfug perfug-maroc</p>
       </header>
 
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/perfug-maroc" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/perfug-morocco" class="button fork"><strong>View On GitHub</strong></a>
       </div><!-- end banner -->
 
     <div class="wrapper">
