Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>Performance User Group Maroc</h1>
-        <p>performance morocco maroc jug perfug perfug-maroc</p>
+        <p>Groupe de travail sur les sujets de la performance dans l&#39;IT au Maroc</p>
       </header>
 
       <div id="banner">
