--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/perfug-morocco" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/perfug-morocco" class="button fork"><strong>Voir sur GitHub</strong></a>
       </div><!-- end banner -->
 
     <div class="wrapper">
