--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="wrapper">
       <nav>
-        <ul></ul>
+        <ul><li><a href="#">Test 1</a></li><li><a href="#">Test 2</a></li></ul>
       </nav>
       <section>
         <h3>
