--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 
     <div class="wrapper">
       <nav>
-        <ul><li><a href="#">Test 1</a></li><li><a href="#">Test 2</a></li></ul>
+        <ul>
+          <li><a href="#">Accueil</a></li>
+          <li><a href="#">Nos valeurs</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Twitter feed</a></li>
+        </ul>
       </nav>
       <section>
         <h3>
