--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="wrapper">
       <nav>
         <ul>
-          <li><a href="#">Accueil</a></li>
+          <li><a href="#accueil">Accueil</a></li>
           <li><a href="#">Nos valeurs</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Twitter feed</a></li>
@@ -38,7 +38,7 @@
       </nav>
       <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="accueil" class="anchor" href="#accueil"><span class="octicon octicon-link"></span></a>Accueil.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
