--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <li><a href="#">Nos valeurs</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Twitter feed</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <section>
