--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
     <div class="wrapper">
       <nav>
         <ul>
-          <li><a href="#accueil">Accueil</a></li>
-          <li><a href="#">Nos valeurs</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Twitter feed</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="#prochains-events">Prochains events</a></li>
+          <li><a href="#comptes-rendus-supports">Comptes rendus et supports</a></li>
+          <li><a href="#blogs">Blog</a></li>
+          <li><a href="#twitter-feeds">Twitter feeds</a></li>
+          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="#a-propos-de-nous">A propos de nous</a></li>
         </ul>
       </nav>
       <section>
