--- a/index.html
+++ b/index.html
@@ -39,17 +39,10 @@
         </ul>
       </nav>
       <section>
-        <h3>
-<a name="accueil" class="anchor" href="#accueil"><span class="octicon octicon-link"></span></a>Accueil.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h3>
+<a name="prochains-events" class="anchor" href="#prochains-events"><span class="octicon octicon-link"></span></a>Prochains events.</h3>
+<p><a href="#">Prochain PerfUG : date à définir : sujet à définir :</a> lancement officiel du groupe, rencontre entre les membres...</p>
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
