--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <nav>
         <ul>
           <li><a href="#prochains-events">Prochains events</a></li>
-          <li><a href="#comptes-rendus-supports">Comptes rendus et supports</a></li>
+          <li><a href="#comptes-rendus-supports">Comptes-rendus et supports</a></li>
           <li><a href="#blogs">Blog</a></li>
           <li><a href="#twitter-feeds">Twitter feeds</a></li>
           <li><a href="#contacts">Contacts</a></li>
@@ -41,29 +41,29 @@
       <section>
 
 <h3>
-<a name="prochains-events" class="anchor" href="#prochains-events"><span class="octicon octicon-link"></span></a>Prochains events.</h3>
+<a name="prochains-events" class="anchor" href="#prochains-events"><span class="octicon octicon-link"></span></a>Prochains events</h3>
 <p><a href="#">Prochain PerfUG : date à définir : sujet à définir :</a> lancement officiel du groupe, rencontre entre les membres...</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<a name="comptes-rendus-supports" class="anchor" href="#comptes-rendus-supports"><span class="octicon octicon-link"></span></a>Comptes-rendus et supports</h3>
+<p>Pour le moment, nous n'avons tenu aucune réunion. Donc aucun compte-rendu à partager...</p>
 
 <h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a name="blog" class="anchor" href="#blog"><span class="octicon octicon-link"></span></a>Blog PerfUG Maroc</h3>
+<p>Aucun article de blog à partager.</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h3>
+<a name="twitter-feeds" class="anchor" href="#twitter-feeds"><span class="octicon octicon-link"></span></a>Twitter feeds</h3>
+<p>Aucun tweet concernant le hashtag <a href="https://twitter.com/search?q=perfug-morocco" class="user-mention">#perfug-morocco</a> pour le moment.</p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+
+  
+</section>
+
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
