--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="#comptes-rendus-supports">Comptes-rendus et supports</a></li>
           <li><a href="#blogs">Blog</a></li>
           <li><a href="#twitter-feeds">Twitter feeds</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="#support-or-contact">Contact ou support</a></li>
           <li><a href="#a-propos-de-nous">A propos de nous</a></li>
         </ul>
       </nav>
@@ -57,10 +57,10 @@
 <p>Aucun tweet concernant le hashtag <a href="https://twitter.com/search?q=perfug-morocco" class="user-mention">#perfug-morocco</a> pour le moment.</p>
 
 <h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Contact ou support</h3>
+<p>Pour plus d'informations au sujet de ce groupe, écrivez-nous à l'adresse : <a href="mailto:perfug-morocco@googlegroups.com">perfug-morocco@googlegroups.com</a>.</p>
+<p>N'hésitez pas à vous nous suivre sur notre profile twitter : <a href="http://twitter.com/#perfug-morocco/">#perfug-morocco</a>.</p>
+<p>Le contenu et les exemples exposés sur ce site sont partagés sur github à l'adresse : <a href="https://github.com/perfug-morocco">https://github.com/perfug-morocco</a>.</p>
   
 </section>
 
