--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
 <h3>
 <a name="twitter-feeds" class="anchor" href="#twitter-feeds"><span class="octicon octicon-link"></span></a>Twitter feeds</h3>
-<p>Aucun tweet concernant le hashtag <a href="https://twitter.com/search?q=perfug-morocco" class="user-mention">#perfug-morocco</a> pour le moment.</p>
+<p>Aucun tweet concernant le hashtag <a href="https://twitter.com/search?q=perfugmorocco" class="user-mention">#perfug-morocco</a> pour le moment.</p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Contact ou support</h3>
 <p>Pour plus d'informations au sujet de ce groupe, écrivez-nous à l'adresse : <a href="mailto:perfug-morocco@googlegroups.com">perfug-morocco@googlegroups.com</a>.</p>
-<p>N'hésitez pas à vous nous suivre sur notre profile twitter : <a href="http://twitter.com/#perfug-morocco/">#perfug-morocco</a>.</p>
+<p>N'hésitez pas à vous nous suivre sur notre profile twitter : <a href="http://twitter.com/#perfugmorocco/">#perfugmorocco</a>.</p>
 <p>Le contenu et les exemples exposés sur ce site sont partagés sur github à l'adresse : <a href="https://github.com/perfug-morocco">https://github.com/perfug-morocco</a>.</p>
   
 </section>
