--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
           <li><a href="#a-propos-de-nous">A propos de nous</a></li>
         </ul>
       </nav>
-      <section>
-
+<section>
+<h1>Prochains events</h1>
 <h3>
 <a name="prochains-events" class="anchor" href="#prochains-events"><span class="octicon octicon-link"></span></a>Prochains events</h3>
 <p><a href="#">Prochain PerfUG : date à définir : sujet à définir :</a> lancement officiel du groupe, rencontre entre les membres...</p>
 
+<h1>Compte-redus et supports</h1>
 <h3>
 <a name="comptes-rendus-supports" class="anchor" href="#comptes-rendus-supports"><span class="octicon octicon-link"></span></a>Comptes-rendus et supports</h3>
 <p>Pour le moment, nous n'avons tenu aucune réunion. Donc aucun compte-rendu à partager...</p>
