--- a/index.html
+++ b/index.html
@@ -40,29 +40,37 @@
       </nav>
 <section>
 <h1>Prochains events</h1>
-<h3>
-<a name="prochains-events" class="anchor" href="#prochains-events"><span class="octicon octicon-link"></span></a>Prochains events</h3>
 <p><a href="#">Prochain PerfUG : date à définir : sujet à définir :</a> lancement officiel du groupe, rencontre entre les membres...</p>
 
 <h1>Compte-redus et supports</h1>
-<h3>
-<a name="comptes-rendus-supports" class="anchor" href="#comptes-rendus-supports"><span class="octicon octicon-link"></span></a>Comptes-rendus et supports</h3>
 <p>Pour le moment, nous n'avons tenu aucune réunion. Donc aucun compte-rendu à partager...</p>
 
-<h3>
+<h1>Blog PerfUG</h1>
 <a name="blog" class="anchor" href="#blog"><span class="octicon octicon-link"></span></a>Blog PerfUG Maroc</h3>
 <p>Aucun article de blog à partager.</p>
 
-<h3>
-<a name="twitter-feeds" class="anchor" href="#twitter-feeds"><span class="octicon octicon-link"></span></a>Twitter feeds</h3>
+<h1>Twitter feeds</h1>
 <p>Aucun tweet concernant le hashtag <a href="https://twitter.com/search?q=perfugmorocco" class="user-mention">#perfug-morocco</a> pour le moment.</p>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Contact ou support</h3>
+<h1>Contact ou support</h1>
 <p>Pour plus d'informations au sujet de ce groupe, écrivez-nous à l'adresse : <a href="mailto:perfug-morocco@googlegroups.com">perfug-morocco@googlegroups.com</a>.</p>
 <p>N'hésitez pas à vous nous suivre sur notre profile twitter : <a href="http://twitter.com/#perfugmorocco/">#perfugmorocco</a>.</p>
 <p>Le contenu et les exemples exposés sur ce site sont partagés sur github à l'adresse : <a href="https://github.com/perfug-morocco">https://github.com/perfug-morocco</a>.</p>
-  
+
+<h1>A propos de nous</h1>
+
+<h3>
+<a name="definition-performance" class="anchor" href="#definition-performance"><span class="octicon octicon-link"></span></a>Qu'est-ce que la performance ?</h3>
+<p>Pour plus d'informations au sujet de ce groupe, écrivez-nous à l'adresse : <a href="mailto:perfug-morocco@googlegroups.com">perfug-morocco@googlegroups.com</a>.</p>
+<p>N'hésitez pas à vous nous suivre sur notre profile twitter : <a href="http://twitter.com/#perfugmorocco/">#perfugmorocco</a>.</p>
+<p>Le contenu et les exemples exposés sur ce site sont partagés sur github à l'adresse : <a href="https://github.com/perfug-morocco">https://github.com/perfug-morocco</a>.</p>
+
+<h3>
+<a name="notre-vision" class="anchor" href="#notre-vision"><span class="octicon octicon-link"></span></a>Notre vision</h3>
+
+<h3>
+<a name="notre-mission" class="anchor" href="#notre-mission"><span class="octicon octicon-link"></span></a>Notre mission</h3>
+
 </section>
 
       <footer>
