--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Performance User Group Maroc by perfug-morocco</title>
+    <title>Performance User Group Maroc</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -29,15 +29,8 @@
 
     <div class="wrapper">
       <nav>
-        <ul>
-          <li><a href="#prochains-events">Prochains events</a></li>
-          <li><a href="#comptes-rendus-supports">Comptes-rendus et supports</a></li>
-          <li><a href="#blogs">Blog</a></li>
-          <li><a href="#twitter-feeds">Twitter feeds</a></li>
-          <li><a href="#support-or-contact">Contact ou support</a></li>
-          <li><a href="#a-propos-de-nous">A propos de nous</a></li>
-        </ul>
       </nav>
+
 <section>
 <h1>Prochains events</h1>
 <p><a href="#">Prochain PerfUG : date à définir : sujet à définir :</a> lancement officiel du groupe, rencontre entre les membres...</p>
