--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
 
 <h2>
 <a name="definition-performance" class="anchor" href="#definition-performance"><span class="octicon octicon-link"></span></a>Qu'est-ce que la performance ?</h3>
-<p>Pour plus d'informations au sujet de ce groupe, écrivez-nous à l'adresse : <a href="mailto:perfug-morocco@googlegroups.com">perfug-morocco@googlegroups.com</a>.</p>
-<p>N'hésitez pas à vous nous suivre sur notre profile twitter : <a href="http://twitter.com/#perfugmorocco/">#perfugmorocco</a>.</p>
-<p>Le contenu et les exemples exposés sur ce site sont partagés sur github à l'adresse : <a href="https://github.com/perfug-morocco">https://github.com/perfug-morocco</a>.</p>
+<p>
+Un test de performance est un test dont l'objectif est de déterminer la performance d'un système informatique.
+</p>
+<p>
+L'acception la plus courante de ce terme est celle dans laquelle ces tests logiciels vont avoir pour objectif de mesurer les temps de réponse d'un système applicatif en fonction de sa sollicitation. 
+</p>
+<P>
+Cette définition est donc très proche de celle de test de charge où l'on mesure le comportement d'un système en fonction de la charge d'utilisateurs simultanés. Seuls les tests de charge permettent de valider correctement une application ou un système avant déploiement, tant en Qualité de Service qu'en consommation de ressources.
+</p>
 
 <h2>
 <a name="notre-vision" class="anchor" href="#notre-vision"><span class="octicon octicon-link"></span></a>Notre vision</h3>
