--- a/index.html
+++ b/index.html
@@ -67,7 +67,19 @@ Cette définition est donc très proche de celle de test de charge où l'on mesu
 
 <h2>
 <a name="notre-vision" class="anchor" href="#notre-vision"><span class="octicon octicon-link"></span></a>Notre vision</h3>
-
+<p>
+  Tout utilisateur de système informatique s’attend à recevoir un système
+<ul>
+<li>Qui répond de façon stable quelque soit sa charge</li>
+<li>Qui répondre en un temps cohérent par rapport à l’action qu’il réalise</li>
+<li>Bref un système performant.</li>
+</ul>
+<p>
+Tout développeur ayant mis en production sait apprécier l’effort que cela requiert.
+</p>
+<p>
+Les plus expérimentés savent que le problème est rarement là où on le pensait même avec un flair aiguisé.
+</p>
 <h2>
 <a name="notre-mission" class="anchor" href="#notre-mission"><span class="octicon octicon-link"></span></a>Notre mission</h3>
 
