--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@ Les plus expérimentés savent que le problème est rarement là où on le pensa
 </p>
 <h2>
 <a name="notre-mission" class="anchor" href="#notre-mission"><span class="octicon octicon-link"></span></a>Notre mission</h3>
-
+<p>
+  Offrir un lieu d’échanges informels où toutes les personnes intéressées par l’optimisation et la performance sont les bienvenues quel que soit leur niveau.
+</p>
+<p>
+Echanger nos idées et nos pratiques sur ces sujets pour obtenir plus simplement des systèmes performants.
+</p>
+<p>
+Faciliter la diffusion des derniers outils et des meilleures techniques pour maîtriser au plus tôt la performance d’un système informatique.
+</p>
 </section>
 
       <footer>
