--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Performance User Group Maroc</title>
+    <title>PerfUG-Morocco - Performance User Group Morocco</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Performance User Group Maroc</h1>
+        <h1>Performance User Group Morocco</h1>
         <p>Groupe de travail sur les sujets de la performance dans l&#39;IT au Maroc</p>
       </header>
 
@@ -34,7 +34,7 @@
 
 <section>
 <h1>Prochains events</h1>
-<p><a href="#">Prochain PerfUG : date à définir : sujet à définir :</a> lancement officiel du groupe, rencontre entre les membres...</p>
+<p><a href="https://www.eventbrite.fr/e/billets-perfug-morocco-tirs-de-charge-avec-gatling-et-presentation-du-user-group-12943258635?ref=estw">Prochain PerfUG : 24/09/2014 : Tirs de charge avec Gatling et présentation du User Group :</a> lancement officiel du groupe, rencontre entre les membres...</p>
 
 <h1>Compte-redus et supports</h1>
 <p>Pour le moment, nous n'avons tenu aucune réunion. Donc aucun compte-rendu à partager...</p>
