--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p>Aucun tweet concernant le hashtag <a href="https://twitter.com/search?q=perfugmorocco" class="user-mention">#perfug-morocco</a> pour le moment.</p>
 
 <h1>Contact ou support</h1>
-<p>Pour plus d'informations au sujet de ce groupe, écrivez-nous à l'adresse : <a href="mailto:perfug-morocco@googlegroups.com">perfug-morocco@googlegroups.com</a>.</p>
+<p>Pour plus d'informations au sujet de ce groupe, écrivez-nous à l'adresse : <a href="mailto:perfugmorocco@googlegroups.com">perfug-morocco@googlegroups.com</a>.</p>
 <p>N'hésitez pas à vous nous suivre sur notre profile twitter : <a href="http://twitter.com/#perfugmorocco/">#perfugmorocco</a>.</p>
 <p>Le contenu et les exemples exposés sur ce site sont partagés sur github à l'adresse : <a href="https://github.com/perfug-morocco">https://github.com/perfug-morocco</a>.</p>
 
