--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>Aucun article de blog à partager.</p>
 
 <h1>Twitter feeds</h1>
-<p>Aucun tweet concernant le hashtag <a href="https://twitter.com/search?q=perfugmorocco" class="user-mention">#perfug-morocco</a> pour le moment.</p>
+<p>Aucun tweet concernant le hashtag <a href="https://twitter.com/search?q=perfugmorocco" class="user-mention">#perfugmorocco</a> pour le moment.</p>
 
 <h1>Contact ou support</h1>
 <p>Pour plus d'informations au sujet de ce groupe, écrivez-nous à l'adresse : <a href="mailto:perfugmorocco@googlegroups.com">perfug-morocco@googlegroups.com</a>.</p>
