Fix HTTP Flickr

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <h4>Groupe LinkedIn</h4>
                         <p>Retrouvez toutes nos activités sur LinkedIn</p>
                     <div class="followcontent">
-                	   <script src="http://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+                	   <script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
 <script type="IN/Share" data-url="https://www.linkedin.com/groups/8157275" data-counter="top"></script>
                     </div>
                 </div><!--followrapper-->
