Fix LinkedIn share

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <p>Retrouvez toutes nos activités sur LinkedIn</p>
                     <div class="followcontent">
                 	   <script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
-<script type="IN/Share" data-url="https://www.linkedin.com/groups/8157275" data-counter="top"></script>
+<script type="IN/Share" data-url="https://perfug-morocco.github.io" data-counter="top"></script>
                     </div>
                 </div><!--followrapper-->
                 
